--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/interactive-scatterplot-d3/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Svelte</title>
-    <script type="module" crossorigin src="/assets/index.f52629f2.js"></script>
-    <link rel="stylesheet" href="/assets/index.f1cf50ea.css">
+    <script type="module" crossorigin src="/interactive-scatterplot-d3/assets/index.f52629f2.js"></script>
+    <link rel="stylesheet" href="/interactive-scatterplot-d3/assets/index.f1cf50ea.css">
   </head>
   <body>
     <div id="app"></div>
